Fixed score. Added reset score. Need to teleport. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,8 +37,11 @@ NewWindowPosition=(X=640,Y=340)
 LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
+OpenAssetsAtExit=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger
+OpenAssetsAtExit=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger
+OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -59,7 +62,6 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -106,7 +108,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -758,7 +760,7 @@ REINST_BP_PickupBeanbag_C_62.Actor=True
 TriggerBox.TransformCommon=True
 TriggerBox.Shape=True
 TriggerBox.Navigation=True
-TriggerBox.Physics=True
+TriggerBox.Physics=False
 TriggerBox.Rendering=True
 TriggerBox.Collision=True
 TriggerBox.Tags=True
@@ -946,6 +948,58 @@ BeanbagTrigger_C.Input=True
 BeanbagTrigger_C.Actor=True
 TextRenderComponent.ComponentReplication=True
 TextRenderComponent.Variable=True
+BeanbagTrigger_C.Default=True
+BeanbagTrigger_C.TransformCommon=True
+BeanbagTrigger_C.Shape=True
+BeanbagTrigger_C.Navigation=True
+BeanbagTrigger_C.Physics=True
+BeanbagTrigger_C.Collision=True
+BeanbagTrigger_C.Tags=True
+BeanbagTrigger_C.Cooking=True
+BlueBagTrigger_C.Tick=True
+BlueBagTrigger_C.Default=True
+BlueBagTrigger_C.Rendering=True
+BlueBagTrigger_C.Replication=True
+BlueBagTrigger_C.Input=True
+BlueBagTrigger_C.Actor=True
+RedBeanbagTrigger_C.TransformCommon=True
+RedBeanbagTrigger_C.Shape=True
+RedBeanbagTrigger_C.Navigation=True
+RedBeanbagTrigger_C.Physics=True
+RedBeanbagTrigger_C.Rendering=True
+RedBeanbagTrigger_C.Collision=True
+RedBeanbagTrigger_C.Tags=True
+RedBeanbagTrigger_C.Cooking=True
+RedBeanbagTrigger_C.Input=True
+RedBeanbagTrigger_C.Actor=True
+BlueBagTrigger_C.TransformCommon=True
+BlueBagTrigger_C.Shape=True
+BlueBagTrigger_C.Navigation=True
+BlueBagTrigger_C.Physics=True
+BlueBagTrigger_C.Collision=True
+BlueBagTrigger_C.Tags=True
+BlueBagTrigger_C.Cooking=True
+TextRenderActor2_Blueprint_C.Tick=True
+TextRenderActor2_Blueprint_C.Rendering=True
+TextRenderActor2_Blueprint_C.Replication=True
+TextRenderActor2_Blueprint_C.Input=True
+TextRenderActor2_Blueprint_C.Actor=True
+TextRenderActor2_Blueprint_C.TransformCommon=True
+TextRenderActor2_Blueprint_C.Materials=True
+TextRenderActor2_Blueprint_C.Text=True
+TextRenderActor2_Blueprint_C.Lighting=True
+TextRenderActor2_Blueprint_C.Tags=True
+TextRenderActor2_Blueprint_C.Cooking=True
+REINST_TextRenderActor2_Blueprint_C_372.TransformCommon=True
+REINST_TextRenderActor2_Blueprint_C_372.Materials=True
+REINST_TextRenderActor2_Blueprint_C_372.Text=True
+REINST_TextRenderActor2_Blueprint_C_372.Rendering=True
+REINST_TextRenderActor2_Blueprint_C_372.Lighting=True
+REINST_TextRenderActor2_Blueprint_C_372.Tags=True
+REINST_TextRenderActor2_Blueprint_C_372.Cooking=True
+REINST_TextRenderActor2_Blueprint_C_372.Input=True
+REINST_TextRenderActor2_Blueprint_C_372.Actor=True
+TextRenderActor2_Blueprint_C.Default=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -960,9 +1014,11 @@ BP_PickupCube_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger;
+RecentlyPlaced=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger;
+RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New.Tyler_Tree3New;
@@ -978,8 +1034,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_001.Tyler_Tree3New_Plane_001;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_004.Tyler_Tree3New_Plane_004;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plane_003;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
@@ -1011,6 +1065,7 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plan
 /Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1=0
 /Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag=1
 /Game/Tyler_Blueprints/Tyler_cornholeBoard2_Blueprint.Tyler_cornholeBoard2_Blueprint=0
+/Game/Tyler_Blueprints/BeanbagTrigger.BeanbagTrigger=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -1708,6 +1763,7 @@ DisplayPluginFolders=False
 [SuppressableDialogs]
 WritablePackagesNotCheckedOut=False
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=True
