Created new score manager class. -Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,9 +39,9 @@ LastLevel=/Game/TylerMap1
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
-OpenAssetsAtExit=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger
-OpenAssetsAtExit=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
+OpenAssetsAtExit=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger
+OpenAssetsAtExit=/Game/Tyler_Blueprints/ScoreManager.ScoreManager
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -106,6 +106,7 @@ BrushRadius=500.000000
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
+K2Node_VariableGet=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
@@ -1000,6 +1001,15 @@ REINST_TextRenderActor2_Blueprint_C_372.Cooking=True
 REINST_TextRenderActor2_Blueprint_C_372.Input=True
 REINST_TextRenderActor2_Blueprint_C_372.Actor=True
 TextRenderActor2_Blueprint_C.Default=True
+RedBeanbagTrigger_C.Tick=True
+RedBeanbagTrigger_C.Default=True
+RedBeanbagTrigger_C.Replication=True
+ScoreManager_C.TransformCommon=True
+ScoreManager_C.Rendering=True
+ScoreManager_C.Input=True
+ScoreManager_C.Actor=True
+ScoreManager_C.Tick=True
+ScoreManager_C.Replication=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1014,10 +1024,11 @@ BP_PickupCube_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Tyler_Blueprints/ScoreManager.ScoreManager;
+RecentlyPlaced=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger;
-RecentlyPlaced=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger;
 RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube;
@@ -1033,7 +1044,6 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Fence.Tyler_Fence;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_001.Tyler_Tree3New_Plane_001;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
