--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -13,8 +13,8 @@ JavaPath=(Path="")
 
 [Oculus.Settings]
 GraphicsAdapter=0
-AudioInputDevice="{0.0.1.00000000}.{fe2ff1ab-9993-4d15-b9de-762b3162623e}"
-AudioOutputDevice="{0.0.0.00000000}.{e4e9fa6c-7af4-4587-a8b4-05ddfabab131}"
+AudioInputDevice="{0.0.1.00000000}.{be77ceb5-2f5e-4a72-9622-c7bab4c977ea}"
+AudioOutputDevice="{0.0.0.00000000}.{07e8e4cf-bc58-4c13-946a-33191f8d5b7b}"
 bChromaAbCorrectionEnabled=True
 PixelDensity=1.000000
 PixelDensityMin=0.500000
@@ -35,5 +35,13 @@ TunnelMulticastEndpoint=
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
