Fixed problem with displaying score, but it only works for the red. Need to fix for the blue. Also try out sam's rec of using tags. -Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,10 +38,10 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
-OpenAssetsAtExit=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger
 OpenAssetsAtExit=/Game/Tyler_Blueprints/ScoreManager.ScoreManager
+OpenAssetsAtExit=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard
+OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -107,6 +107,10 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
 K2Node_VariableGet=
+K2Node_VariableSet=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+CornHoleboard_C=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+IntProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
@@ -1010,6 +1014,95 @@ ScoreManager_C.Input=True
 ScoreManager_C.Actor=True
 ScoreManager_C.Tick=True
 ScoreManager_C.Replication=True
+BeanbagTriggerMain_C.Tick=True
+BeanbagTriggerMain_C.Rendering=True
+BeanbagTriggerMain_C.Replication=True
+BeanbagTriggerMain_C.Input=True
+BeanbagTriggerMain_C.Actor=True
+ScoreManager_C.Default=True
+CornHoleboard_C.Tick=True
+CornHoleboard_C.Default=True
+CornHoleboard_C.Rendering=True
+CornHoleboard_C.Replication=True
+CornHoleboard_C.Input=True
+CornHoleboard_C.Actor=True
+REINST_BP_PickupBeanbag_C_45.Tick=True
+REINST_BP_PickupBeanbag_C_45.None=True
+REINST_BP_PickupBeanbag_C_45.Actor=True
+REINST_BP_PickupBeanbag_C_45.Rendering=True
+REINST_BP_PickupBeanbag_C_45.Replication=True
+REINST_BP_PickupBeanbag_C_45.Input=True
+REINST_BP_PickupBeanbag_C_87.Tick=True
+REINST_BP_PickupBeanbag_C_87.None=True
+REINST_BP_PickupBeanbag_C_87.Actor=True
+REINST_BP_PickupBeanbag_C_87.Rendering=True
+REINST_BP_PickupBeanbag_C_87.Replication=True
+REINST_BP_PickupBeanbag_C_87.Input=True
+REINST_BP_PickupBeanbag_C_103.Tick=True
+REINST_BP_PickupBeanbag_C_103.None=True
+REINST_BP_PickupBeanbag_C_103.Actor=True
+REINST_BP_PickupBeanbag_C_103.Rendering=True
+REINST_BP_PickupBeanbag_C_103.Replication=True
+REINST_BP_PickupBeanbag_C_103.Input=True
+CornHoleboard_C.TransformCommon=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.Sockets=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Events=True
+REINST_BP_PickupBeanbag_C_113.Tick=True
+REINST_BP_PickupBeanbag_C_113.None=True
+REINST_BP_PickupBeanbag_C_113.Actor=True
+REINST_BP_PickupBeanbag_C_113.Rendering=True
+REINST_BP_PickupBeanbag_C_113.Replication=True
+REINST_BP_PickupBeanbag_C_113.Input=True
+REINST_BP_PickupBeanbag_C_189.Tick=True
+REINST_BP_PickupBeanbag_C_189.None=True
+REINST_BP_PickupBeanbag_C_189.Actor=True
+REINST_BP_PickupBeanbag_C_189.Rendering=True
+REINST_BP_PickupBeanbag_C_189.Replication=True
+REINST_BP_PickupBeanbag_C_189.Input=True
+REINST_BP_PickupBeanbag_C_203.Tick=True
+REINST_BP_PickupBeanbag_C_203.None=True
+REINST_BP_PickupBeanbag_C_203.Actor=True
+REINST_BP_PickupBeanbag_C_203.Rendering=True
+REINST_BP_PickupBeanbag_C_203.Replication=True
+REINST_BP_PickupBeanbag_C_203.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BoxComponent.Mobile=False
+REINST_BP_PickupBeanbag_C_277.Tick=True
+REINST_BP_PickupBeanbag_C_277.None=True
+REINST_BP_PickupBeanbag_C_277.Actor=True
+REINST_BP_PickupBeanbag_C_277.Rendering=True
+REINST_BP_PickupBeanbag_C_277.Replication=True
+REINST_BP_PickupBeanbag_C_277.Input=True
+REINST_BP_PickupBeanbag_C_305.Tick=True
+REINST_BP_PickupBeanbag_C_305.None=True
+REINST_BP_PickupBeanbag_C_305.Actor=True
+REINST_BP_PickupBeanbag_C_305.Rendering=True
+REINST_BP_PickupBeanbag_C_305.Replication=True
+REINST_BP_PickupBeanbag_C_305.Input=True
+REINST_BP_PickupBeanbag_C_313.Tick=True
+REINST_BP_PickupBeanbag_C_313.None=True
+REINST_BP_PickupBeanbag_C_313.Actor=True
+REINST_BP_PickupBeanbag_C_313.Rendering=True
+REINST_BP_PickupBeanbag_C_313.Replication=True
+REINST_BP_PickupBeanbag_C_313.Input=True
+TextRenderActor.Mobile=True
+REINST_BP_PickupBeanbag_C_339.Tick=True
+REINST_BP_PickupBeanbag_C_339.None=True
+REINST_BP_PickupBeanbag_C_339.Actor=True
+REINST_BP_PickupBeanbag_C_339.Rendering=True
+REINST_BP_PickupBeanbag_C_339.Replication=True
+REINST_BP_PickupBeanbag_C_339.Input=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Events=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1022,13 +1115,20 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
 BP_PickupCube_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
+BP_PickupBeanbag_C=
+CornHoleboard_C=
+TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
+Tyler_cornholeBoard2_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
+TextRenderActor2_Blueprint_C="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
+ScoreManager_C=
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Tyler_Blueprints/ScoreManager.ScoreManager;
+RecentlyPlaced=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger;
 RecentlyPlaced=/Game/Tyler_Blueprints/RedBeanbagTrigger.RedBeanbagTrigger;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger;
 RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube;
@@ -1043,7 +1143,6 @@ RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactory
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Fence.Tyler_Fence;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
@@ -1076,6 +1175,8 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
 /Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag=1
 /Game/Tyler_Blueprints/Tyler_cornholeBoard2_Blueprint.Tyler_cornholeBoard2_Blueprint=0
 /Game/Tyler_Blueprints/BeanbagTrigger.BeanbagTrigger=1
+/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger=0
+/Game/Tyler_Blueprints/BeanbagTriggerMain.BeanbagTriggerMain=0
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -1791,5 +1892,10 @@ BP_PickupBeanbag_C.Lighting=False
 BP_PickupCube_C.StaticMesh=False
 FloatingText.Actor=True
 IntProperty.Variable=False
+BoxComponent.Collision=False
+K2Node_VariableGet.Variable=False
+TextRenderActor.Rendering=False
+TextRenderActor.Lighting=False
+TextRenderActor.Text=False
 
 
