Added scoreboard and reset button to game. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,10 +37,10 @@ NewWindowPosition=(X=640,Y=340)
 LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
 OpenAssetsAtExit=/Game/Tyler_Blueprints/ScoreManager.ScoreManager
-OpenAssetsAtExit=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard
 OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -106,11 +106,12 @@ BrushRadius=500.000000
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
-K2Node_VariableGet=
+K2Node_VariableGet=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 CornHoleboard_C=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-ObjectProperty=
+ObjectProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+BoolProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
@@ -728,7 +729,7 @@ BP_PickupBeanbag_C.Cooking=True
 BP_PickupBeanbag_C.Events=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
-K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionEntry.Outputs=False
 BoolProperty.Variable=True
 BoolProperty.DefaultValueCategory=True
 StructProperty.Variable=True
@@ -811,7 +812,7 @@ REINST_BP_PickupBeanbag_C_70.Tags=True
 REINST_BP_PickupBeanbag_C_70.ComponentReplication=True
 REINST_BP_PickupBeanbag_C_70.Cooking=True
 REINST_BP_PickupBeanbag_C_70.Events=True
-BP_PickupBeanbag_C.Mobile=False
+BP_PickupBeanbag_C.Mobile=True
 StaticMeshActor.Mobile=True
 BP_PickupCube_C.Navigation=True
 BP_PickupCube_C.Mobile=True
@@ -1103,6 +1104,52 @@ REINST_BP_PickupBeanbag_C_339.Replication=True
 REINST_BP_PickupBeanbag_C_339.Input=True
 TextRenderComponent.Sockets=True
 TextRenderComponent.Events=True
+BP_PickupBeanbag_C.Navigation=True
+REINST_BP_PickupBeanbag_C_59.Tick=True
+REINST_BP_PickupBeanbag_C_59.None=True
+REINST_BP_PickupBeanbag_C_59.Actor=True
+REINST_BP_PickupBeanbag_C_59.Rendering=True
+REINST_BP_PickupBeanbag_C_59.Replication=True
+REINST_BP_PickupBeanbag_C_59.Input=True
+REINST_BP_PickupBeanbag_C_115.TransformCommon=True
+REINST_BP_PickupBeanbag_C_115.StaticMesh=True
+REINST_BP_PickupBeanbag_C_115.Materials=True
+REINST_BP_PickupBeanbag_C_115.Physics=True
+REINST_BP_PickupBeanbag_C_115.Collision=True
+REINST_BP_PickupBeanbag_C_115.Lighting=True
+REINST_BP_PickupBeanbag_C_115.Rendering=True
+REINST_BP_PickupBeanbag_C_115.Tags=True
+REINST_BP_PickupBeanbag_C_115.Cooking=True
+REINST_BP_PickupBeanbag_C_115.Input=True
+REINST_BP_PickupBeanbag_C_115.Actor=True
+REINST_BP_PickupBeanbag_C_123.TransformCommon=True
+REINST_BP_PickupBeanbag_C_123.StaticMesh=True
+REINST_BP_PickupBeanbag_C_123.Materials=True
+REINST_BP_PickupBeanbag_C_123.Physics=True
+REINST_BP_PickupBeanbag_C_123.Collision=True
+REINST_BP_PickupBeanbag_C_123.Lighting=True
+REINST_BP_PickupBeanbag_C_123.Rendering=True
+REINST_BP_PickupBeanbag_C_123.Tags=True
+REINST_BP_PickupBeanbag_C_123.Cooking=True
+REINST_BP_PickupBeanbag_C_123.Input=True
+REINST_BP_PickupBeanbag_C_123.Actor=True
+REINST_BP_PickupBeanbag_C_149.TransformCommon=True
+REINST_BP_PickupBeanbag_C_149.StaticMesh=True
+REINST_BP_PickupBeanbag_C_149.Materials=True
+REINST_BP_PickupBeanbag_C_149.Physics=True
+REINST_BP_PickupBeanbag_C_149.Collision=True
+REINST_BP_PickupBeanbag_C_149.Lighting=True
+REINST_BP_PickupBeanbag_C_149.Rendering=True
+REINST_BP_PickupBeanbag_C_149.Tags=True
+REINST_BP_PickupBeanbag_C_149.Cooking=True
+REINST_BP_PickupBeanbag_C_149.Input=True
+REINST_BP_PickupBeanbag_C_149.Actor=True
+REINST_BP_PickupBeanbag_C_99.Tick=True
+REINST_BP_PickupBeanbag_C_99.None=True
+REINST_BP_PickupBeanbag_C_99.Actor=True
+REINST_BP_PickupBeanbag_C_99.Rendering=True
+REINST_BP_PickupBeanbag_C_99.Replication=True
+REINST_BP_PickupBeanbag_C_99.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1114,15 +1161,17 @@ Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
 BP_PickupCube_C=
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
 BP_PickupBeanbag_C=
-CornHoleboard_C=
+CornHoleboard_C="\"Object.Blue?\" \"Object.Blue?\" "
 TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
 Tyler_cornholeBoard2_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 TextRenderActor2_Blueprint_C="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
-ScoreManager_C=
+ScoreManager_C="\"Object.BlueScore\" \"Object.BlueScore\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TylerMaterials/buttonTyler.buttonTyler;
+RecentlyPlaced=/Game/TylerMaterials/scoreboard_tyler.scoreboard_tyler;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Tyler_Blueprints/ScoreManager.ScoreManager;
@@ -1141,8 +1190,6 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tableblend.Tyler_Tableblend;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_cornholeBoard.Tyler_cornholeBoard;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Fence.Tyler_Fence;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
@@ -1177,6 +1224,7 @@ RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 /Game/Tyler_Blueprints/BeanbagTrigger.BeanbagTrigger=1
 /Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger=0
 /Game/Tyler_Blueprints/BeanbagTriggerMain.BeanbagTriggerMain=0
+/Game/Tyler_Blueprints/blueScore.blueScore=0
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -1788,7 +1836,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1897,5 +1945,6 @@ K2Node_VariableGet.Variable=False
 TextRenderActor.Rendering=False
 TextRenderActor.Lighting=False
 TextRenderActor.Text=False
+BP_PickupBeanbag_C.Actor=True
 
 
