Saved blueprint updates. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,7 +37,7 @@ NewWindowPosition=(X=640,Y=340)
 LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
 OpenAssetsAtExit=/Game/Tyler_Blueprints/ScoreManager.ScoreManager
@@ -1249,7 +1249,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Sounds/Bean_Bag_Pickup_tyler.wav
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Outdoors/Cornhole/buttonTyler.obj
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
