Added Crate to place buttons on. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,10 +38,6 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard
-OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
-OpenAssetsAtExit=/Game/Tyler_Blueprints/ScoreManager.ScoreManager
-OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -106,12 +102,15 @@ BrushRadius=500.000000
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
-K2Node_VariableGet=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableSet=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+K2Node_VariableSet=K2Node_VariableSet.DefaultValueCategory.None,
 CornHoleboard_C=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+resetLevelButton_C=K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+BP_PickupBeanbag_C=K2Node_VariableSet.DefaultValueCategory.None,
+StructProperty=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
@@ -1150,6 +1149,41 @@ REINST_BP_PickupBeanbag_C_99.Actor=True
 REINST_BP_PickupBeanbag_C_99.Rendering=True
 REINST_BP_PickupBeanbag_C_99.Replication=True
 REINST_BP_PickupBeanbag_C_99.Input=True
+resetLevelButton_C.Tick=True
+resetLevelButton_C.Actor=True
+resetLevelButton_C.Rendering=True
+resetLevelButton_C.Replication=True
+resetLevelButton_C.Input=True
+buttonTyler_Blueprint_C.TransformCommon=True
+buttonTyler_Blueprint_C.StaticMesh=True
+buttonTyler_Blueprint_C.Materials=True
+buttonTyler_Blueprint_C.Physics=True
+buttonTyler_Blueprint_C.Collision=True
+buttonTyler_Blueprint_C.Lighting=True
+buttonTyler_Blueprint_C.Rendering=True
+buttonTyler_Blueprint_C.Tags=True
+buttonTyler_Blueprint_C.Cooking=True
+buttonTyler_Blueprint_C.Input=True
+buttonTyler_Blueprint_C.Actor=True
+ResetbuttonTyler_Blueprint1_C.TransformCommon=True
+ResetbuttonTyler_Blueprint1_C.StaticMesh=True
+ResetbuttonTyler_Blueprint1_C.Materials=True
+ResetbuttonTyler_Blueprint1_C.Physics=True
+ResetbuttonTyler_Blueprint1_C.Collision=True
+ResetbuttonTyler_Blueprint1_C.Lighting=True
+ResetbuttonTyler_Blueprint1_C.Rendering=True
+ResetbuttonTyler_Blueprint1_C.Tags=True
+ResetbuttonTyler_Blueprint1_C.Cooking=True
+ResetbuttonTyler_Blueprint1_C.Input=True
+ResetbuttonTyler_Blueprint1_C.Actor=True
+resetLevelButton_C.TransformCommon=True
+resetLevelButton_C.StaticMesh=True
+resetLevelButton_C.Materials=True
+resetLevelButton_C.Physics=True
+resetLevelButton_C.Collision=True
+resetLevelButton_C.Lighting=True
+resetLevelButton_C.Tags=True
+resetLevelButton_C.Cooking=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1162,17 +1196,22 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
 BP_PickupCube_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
-BP_PickupBeanbag_C=
-CornHoleboard_C="\"Object.Blue?\" \"Object.Blue?\" "
+BP_PickupBeanbag_C="\"Object.StartingTransform\" \"Object.StartingTransform\" "
+CornHoleboard_C=
 TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
 Tyler_cornholeBoard2_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 TextRenderActor2_Blueprint_C="\"Object.TextRenderActor.TextRender.Object.Tags.ComponentTags\" "
 ScoreManager_C="\"Object.BlueScore\" \"Object.BlueScore\" "
+resetLevelButton_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Tyler_Blueprints/office_table1.office_table1;
+RecentlyPlaced=/Game/Tyler_Blueprints/cup.cup;
+RecentlyPlaced=/Game/Tyler_Blueprints/office_coffeetable.office_coffeetable;
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/Tyler_Blueprints/WoodenCrate_Will.WoodenCrate_Will;
 RecentlyPlaced=/Game/TylerMaterials/buttonTyler.buttonTyler;
 RecentlyPlaced=/Game/TylerMaterials/scoreboard_tyler.scoreboard_tyler;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Tyler_Blueprints/CornHoleboard.CornHoleboard;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Tyler_Blueprints/ScoreManager.ScoreManager;
 RecentlyPlaced=/Game/Tyler_Blueprints/BlueBagTrigger.BlueBagTrigger;
@@ -1186,13 +1225,9 @@ RecentlyPlaced=/Game/TylerMaterials/NewBush_Tyler.NewBush_Tyler;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_BeanbagblendBlue.Tyler_BeanbagblendBlue;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Beanbagblend.Tyler_Beanbagblend;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_FabricBeanbag.Tyler_FabricBeanbag;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Tableblend.Tyler_Tableblend;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_cornholeBoard.Tyler_cornholeBoard;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Fence.Tyler_Fence;
 
 [AssetEditorToolkitTabLocation]
-/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
+/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=0
 /Game/TylerMap1_BuiltData.TylerMap1_BuiltData=1
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=0
 /Game/TylerMaterials/TexturesCom_Grass0003_1_seamless_S.TexturesCom_Grass0003_1_seamless_S=1
@@ -1249,7 +1284,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Outdoors/Cornhole/buttonTyler.obj
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Office/Table1/office_table1.obj
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
@@ -1946,5 +1981,6 @@ TextRenderActor.Rendering=False
 TextRenderActor.Lighting=False
 TextRenderActor.Text=False
 BP_PickupBeanbag_C.Actor=True
+MotionControllerPawn_C.Actor=True
 
 
